fix spacing within the messages container

--- a/app/(loggedIn)/messages/page.module.css
+++ b/app/(loggedIn)/messages/page.module.css
@@ -20,11 +20,12 @@
 .messagescontainer {
     grid-column: 3 / 4;
     background-color: var(--dashboard-front);
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 50px);
+    height: calc(100% - 20px);
     border-radius: 15px;
     display: grid;
     grid-template-rows: 1fr auto;
+    padding: 10px 25px;
 }
 
 .searchbar {
